--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,8 @@
 Paris Relay module
 ==================
 
+2015-09-13 AKHE - Wrong relay index used for zone/subzone check in DM action executes.
+2015-09-13 AKHE - Relay 7 control register removed and reserved register 9 removed from MDF.
 2015-09-13 AKHE - Zone and subzone check now is dune on relay level as they should.
 2015-09-13 AKHE - Changed channel_flags to register_flags
 2015-01-12 AKHE - Fixed register read problem for some registers.
