--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,7 @@
 Paris Relay module
 ==================
 
+2016-03-23 AKHE - Version 1.1.4
 2016-03-23 AKHE - Version 1.1.3
 2016-03-23 AKHE - Fixed bug in control byte write routine.
 2016-03-08 AKHE - Adopted to 1.6 firmware. Adopted for PIC18F26K80.
