2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,7 @@
 Paris Relay module
 ==================
 
+2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
 2016-03-23 AKHE - Version 1.1.5-------------------------------------------------
 2016-03-23 AKHE - Adopted to VSCP firmware 1.6.1
 2016-03-23 AKHE - Version 1.1.4-------------------------------------------------
